schema/testdata/validation_actions_update_non_unique_where/schema.keel
model Person {
    fields {
        name Text
        age Number
    }
    operations {
        update updateName() with (name) {
            @where(person.age == 21)
        }
    }
}