schema/testdata/errors/actions_update_non_unique_where.keel
model Person {
    fields {
        name Text
        age Number
    }

    actions {
        //expect-error:16:26:ActionInputError:The action 'updateName' can only update a single record and therefore must be filtered by unique fields
        update updateName() with (name) {
            @where(person.age == 21)
        }
    }
}
